[package]
name = "rate_limit_filter"
version = "0.1.0"
authors = ["kanishkarj <kanishkarj@hotmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
proxy-wasm = "^0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.0"
#postgres = "^0.19.0"
base64 = "0.12.1"
serde_json ="1.0"